Show centered loading message with delay during task fetch

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
       </header>
 
       <div class="container">
+        <div id="loading-message" style="display: none;" class="loading-message">
+          Loading tasks...
+        </div>
         <main class="card-column-main">
           <!-- Task Columns: Display tasks grouped by status (TODO, DOING, DONE). -->
           <div class="column-div" data-status="todo">
