Add error message UI in HTML/CSS and show error on fetch failure; refine loading timing in main.js

--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
       </header>
 
       <div class="container">
-        <div id="loading-message" style="display: none;" class="loading-message">
+        <div id="loading-message" style="display: none" class="loading-message">
           Loading tasks...
+        </div>
+        <div id="error-message" class="error-message" style="display: none">
+          Failed to load tasks. Please try again later.
         </div>
         <main class="card-column-main">
           <!-- Task Columns: Display tasks grouped by status (TODO, DOING, DONE). -->
