feat: enable task editing and deletion with confirmation handling via task modal buttons and localStorage updates

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
           <option value="doing">doing</option>
           <option value="done">done</option>
         </select>
+        <div class="button-group">
+      <button type="submit" id="save-changes-btn" class="submit-btn">Save Changes</button>
+      <button type="button" id="delete-task-btn" class="delete-btn">Delete Task</button>
       </form>
     </dialog>
     <!-- New Task Modal: Form for adding a new task. -->
