Attempt to fix theme toggle functionality and logo visibility

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       sizes="32x32"
       href="./assets/favicon.svg"
     />
+  
     <script defer src="./scripts/main.js" type="module"></script>
     <title>Kanban Task Management</title>
   </head>
@@ -24,6 +25,9 @@
       <button class="close-sidebar-btn" id="close-sidebar-btn">&times;</button>
       <div id="side-logo-div">
         <img id="logo" src="./assets/logo-light.svg" alt="logo-light" />
+      </div>
+      <div id="side-logo-dark">
+        <img id="logo-dark" src="./assets/logo-dark.svg" alt="logo-dark">
       </div>
 
       <div class="boards-nav-links-div" id="boards-nav-links-div">
